# AFK

./: .gitignore  CMakeLists.txt  basic_attributes.gd  character.gd  project.godot  todo.md
demo/: icon.svg.import
libcombat/libcombat/: character.hpp  combat.hpp  conversions.hpp  party.hpp  turn_management.hpp
libcombat/libcombat/basic/: ability.hpp  character.hpp  limited_value.hpp  turn_management.hpp
libcombat/libcombat/details/: character.cpp  combat.cpp  turn_management.cpp
libcombat/tests/: definitions.hpp  main.cpp
src/core/: character.h  combat.h  party.h  turn_management.h
